--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Simon's blog
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  In this blog I intend to write about all kinds of stuff related to computing and data science.
+twitter_username: Simon_Vt
+github_username: simveit
 minimal_mistakes_skin: default
 search: true
 
@@ -58,9 +56,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Simon Veitner"
+  avatar : "/assets/bio/pp.jpeg"
+  bio    : "I'm Simon a 31 year old into all kinds of stuff related to computing and data science."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
